[Bug #95287088] - Logo z-index tweaked to resolve issue where triggering the mobile menu in chrome would hide the logo

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -152,7 +152,7 @@
       margin-top: 0px
       text-align:center
       padding-top:100px
-      z-index: 0
+      z-index: -1
 
       a
         font:$fonts-light
